--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "sharp": "^0.32.6"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
