--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
